--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
     <link rel="stylesheet" href="node_modules/fullpage.js/dist/jquery.fullpage.css">
     <link rel="stylesheet" type="text/css" href="font/./iconfont.css">
     <link rel="stylesheet" href="lib/animate.css">
-    <link rel="stylesheet" href="lib/swiper-3.4.2.min.css">
+    <link rel="stylesheet" href="lib/swiper.min.css">
     <link rel="stylesheet" href="css/main.css">
     <script src="node_modules/jquery/dist/jquery.js"></script>
     <!-- jquery.easings.min.js 是必须的，用于 easing 参数，也可以使用完整的 jQuery UI 代替 -->
     <script src="node_modules/fullpage.js/vendors/jquery.easings.min.js"></script>
     <script src="node_modules/fullpage.js/dist/jquery.fullpage.js"></script>
-    <script src="lib/swiper-3.4.2.jquery.min.js"></script>
+    <script src="lib/swiper.min.js"></script>
     <script src="js/main.js"></script>
 </head>
 <body>
@@ -155,7 +155,7 @@
     <div class="section">
         <div class="production">
             <div class="title">作品集</div>
-            <div class="content">
+            <div class="content" id="productions">
                 <div class="swiper-container">
                     <div class="swiper-wrapper">
                         <div class="swiper-slide">
@@ -239,9 +239,65 @@
                                 </div>
                             </div>
                         </div>
+                        <div class="swiper-slide">
+                            <div class="content-des">
+                                <h4>铂图</h4>
+                                <div class="intro">
+                                    <div class="item-title">项目简介</div>
+                                    <div class="intro-des">
+                                        <span>该项目为企业网站建设，其包括首页、产品中心、新闻资讯、招商加盟</span>
+                                    </div>
+                                </div>
+                                <div class="responsibility">
+                                    <div class="item-title">项目职责</div>
+                                    <div class="intro-des">
+                                        <span>负责项目首页、产品中心、新闻资讯、招商加盟、人力资源等页面的html，css的开发，与后台的数据交互，实现公司新闻信息及业务板块的动态刷新。</span>
+                                    </div>
+                                </div>
+                                <div class="tech">
+                                    <div class="item-title">技术要点</div>
+                                    <div class="intro-des">
+                                        <ul>
+                                            <li>使用DIV+CSS传统布局；</li>
+                                            <li>引用第三方库jQuery；</li>
+                                            <li>通过Ajax与后台数据交互；</li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="content-des">
+                                <h4>铂图</h4>
+                                <div class="intro">
+                                    <div class="item-title">项目简介</div>
+                                    <div class="intro-des">
+                                        <span>该项目为企业网站建设，其包括首页、产品中心、新闻资讯、招商加盟</span>
+                                    </div>
+                                </div>
+                                <div class="responsibility">
+                                    <div class="item-title">项目职责</div>
+                                    <div class="intro-des">
+                                        <span>负责项目首页、产品中心、新闻资讯、招商加盟、人力资源等页面的html，css的开发，与后台的数据交互，实现公司新闻信息及业务板块的动态刷新。</span>
+                                    </div>
+                                </div>
+                                <div class="tech">
+                                    <div class="item-title">技术要点</div>
+                                    <div class="intro-des">
+                                        <ul>
+                                            <li>使用DIV+CSS传统布局；</li>
+                                            <li>引用第三方库jQuery；</li>
+                                            <li>通过Ajax与后台数据交互；</li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                     <!-- 如果需要分页器 -->
                     <div class="swiper-pagination"></div>
+                    <div class="swiper-button-prev"></div>
+                    <div class="swiper-button-next"></div>
                 </div>
             </div>
             <div class="more">
