--- a/index.html
+++ b/index.html
@@ -42,7 +42,11 @@
                     <ul class="info-list">
                         <li class="info-item">
                             <div class="img"><img src="images/age.svg" alt=""></div>
-                            <div class="intro"><span>年龄</span>/<span></span>25岁</div>
+                            <div class="intro"><span>年龄</span>/<span></span>26岁</div>
+                        </li>
+                        <li class="info-item">
+                            <div class="img"><img src="images/school.svg" alt=""></div>
+                            <div class="intro">暨南大学</div>
                         </li>
                         <li class="info-item">
                             <div class="img"><img src="images/edu.svg" alt=""></div>
@@ -54,7 +58,7 @@
                         </li>
                         <li class="info-item">
                             <div class="img"><img src="images/status.svg" alt=""></div>
-                            <div class="intro"><span>状态</span>/<span></span>离职</div>
+                            <div class="intro"><span>状态</span>/<span></span>在职</div>
                         </li>
                     </ul>
                 </div>
@@ -100,6 +104,7 @@
                         <p>擅长利用各种组件开发快速开发网站</p>
                         <p>能脱离库书写js代码</p>
                         <p>编码常思其健壮性，扩展性，维护性</p>
+                        <p>精通开发小程序</p>
                     </div>
                 </div>
             </div>
@@ -160,26 +165,21 @@
                     <div class="swiper-wrapper">
                         <div class="swiper-slide">
                             <div class="content-des">
-                                <h4>C3beer</h4>
+                                <h4>大砍家小程序</h4>
                                 <div class="intro">
                                     <div class="item-title">项目简介</div>
                                     <div class="intro-des">
-                                        <span>该项目是一个响应式啤酒咨询网站，啤酒库有全世界不同国家的各种精酿啤酒</span>
-                                    </div>
-                                </div>
-                                <div class="responsibility">
-                                    <div class="item-title">项目职责</div>
-                                    <div class="intro-des">
-                                        <span>负责整个项目的页面开发和页面交互效果，使用Bootstrap框架的栅格系统对整个页面进行了屏幕响应式布局，负责页面的几个功能点：啤酒库（所有啤酒分类的搜索和模糊搜索），活动（提供最新的店铺活动资讯），文章（提供精酿啤酒的最新资讯和最多人关心的数据交互）。</span>
+                                        <span>大砍家小程序是美乐乐家居网的一个砍价小程序，类似拼多多的砍价小程序，主要是负责砍价优惠销售家具。</span>
                                     </div>
                                 </div>
                                 <div class="tech">
                                     <div class="item-title">技术要点</div>
                                     <div class="intro-des">
                                         <ul>
-                                            <li>使用Bootstrap实现页面的响应式布局；</li>
-                                            <li>使用ajax获取后台数据；</li>
-                                            <li>使用了懒加载技术</li>
+                                            <li>负责整个项目的搭建，包括公用工具函数和公用组件的编写</li>
+                                            <li>负责商品首页，我的砍价列表和砍价详情页的制作</li>
+                                            <li>负责前后端联调</li>
+                                            <li>bug的修改及项目的优化</li>
                                         </ul>
                                     </div>
                                 </div>
@@ -187,26 +187,22 @@
                         </div>
                         <div class="swiper-slide">
                             <div class="content-des">
-                                <h4>照照体检</h4>
+                                <h4>美乐乐家居精灵后台管理系统的开发</h4>
                                 <div class="intro">
                                     <div class="item-title">项目简介</div>
                                     <div class="intro-des">
-                                        <span>该项目为一款医疗健康app，为用户提供便捷检测方法，还可以随时查看健康资讯，养成健康习惯。</span>
-                                    </div>
-                                </div>
-                                <div class="responsibility">
-                                    <div class="item-title">项目职责</div>
-                                    <div class="intro-des">
-                                        <span>负责整个app框架的搭建，以及各个模板子页的数据交互及样式排版；</span>
+                                        <span>该系统包括运营活动的配置，门店管理系统，电商系统等几大模块。该系统主要为小程序，微信H5活动页面，门店的一些优惠券等活动提供支持。</span>
                                     </div>
                                 </div>
                                 <div class="tech">
-                                    <div class="item-title">技术要点</div>
+                                    <div class="item-title">项目职责</div>
                                     <div class="intro-des">
                                         <ul>
-                                            <li>借助MUI框架构建项目主要样式、项目框架、下拉刷新效果；</li>
-                                            <li>结合reactjs完成页面模板切换，页面动态载入数据；</li>
-                                            <li>使用5+APP注入设备摄像头调用服务插件，借助Hbuild打包成安装包；</li>
+                                            <li>负责节日活动配置页面的开发</li>
+                                            <li>素材管理页面的开发</li>
+                                            <li>系统的完善与优化</li>
+                                            <li>系统页面性能的优化</li>
+                                            <li>系统重构</li>
                                         </ul>
                                     </div>
                                 </div>
@@ -214,26 +210,21 @@
                         </div>
                         <div class="swiper-slide">
                             <div class="content-des">
-                                <h4>铂图</h4>
+                                <h4>公共组件的开发</h4>
                                 <div class="intro">
                                     <div class="item-title">项目简介</div>
                                     <div class="intro-des">
-                                        <span>该项目为企业网站建设，其包括首页、产品中心、新闻资讯、招商加盟</span>
-                                    </div>
-                                </div>
-                                <div class="responsibility">
-                                    <div class="item-title">项目职责</div>
-                                    <div class="intro-des">
-                                        <span>负责项目首页、产品中心、新闻资讯、招商加盟、人力资源等页面的html，css的开发，与后台的数据交互，实现公司新闻信息及业务板块的动态刷新。</span>
+                                        <span>因为后台管理系统页面有很多相似的功能及相似的表单输入框，所以为了提高开发效率，就考虑将这些相似的功能的地方封装成组件</span>
                                     </div>
                                 </div>
                                 <div class="tech">
-                                    <div class="item-title">技术要点</div>
+                                    <div class="item-title">项目职责</div>
                                     <div class="intro-des">
                                         <ul>
-                                            <li>使用DIV+CSS传统布局；</li>
-                                            <li>引用第三方库jQuery；</li>
-                                            <li>通过Ajax与后台数据交互；</li>
+                                            <li>负责各种表单组件的封装，直接根据传参就能直接引用</li>
+                                            <li>负责上传图片组件的开发</li>
+                                            <li>负责添加商品弹框组件的开发</li>
+                                            <li>负责树状目录的开发，利用Vue框架递归组件原理</li>
                                         </ul>
                                     </div>
                                 </div>
@@ -241,26 +232,20 @@
                         </div>
                         <div class="swiper-slide">
                             <div class="content-des">
-                                <h4>铂图</h4>
+                                <h4>节日活动大转盘抽奖活动</h4>
                                 <div class="intro">
                                     <div class="item-title">项目简介</div>
                                     <div class="intro-des">
-                                        <span>该项目为企业网站建设，其包括首页、产品中心、新闻资讯、招商加盟</span>
-                                    </div>
-                                </div>
-                                <div class="responsibility">
-                                    <div class="item-title">项目职责</div>
-                                    <div class="intro-des">
-                                        <span>负责项目首页、产品中心、新闻资讯、招商加盟、人力资源等页面的html，css的开发，与后台的数据交互，实现公司新闻信息及业务板块的动态刷新。</span>
+                                        <span>该项目为节日活动给顾客抽奖机会的项目</span>
                                     </div>
                                 </div>
                                 <div class="tech">
-                                    <div class="item-title">技术要点</div>
+                                    <div class="item-title">项目职责</div>
                                     <div class="intro-des">
                                         <ul>
-                                            <li>使用DIV+CSS传统布局；</li>
-                                            <li>引用第三方库jQuery；</li>
-                                            <li>通过Ajax与后台数据交互；</li>
+                                            <li>负责抽奖页面的布局，及抽奖的逻辑实现；</li>
+                                            <li>奖品列表页面的制作</li>
+                                            <li>与后端进行接口联调，bug修改</li>
                                         </ul>
                                     </div>
                                 </div>
@@ -268,26 +253,20 @@
                         </div>
                         <div class="swiper-slide">
                             <div class="content-des">
-                                <h4>铂图</h4>
+                                <h4>梦想的家小程序</h4>
                                 <div class="intro">
                                     <div class="item-title">项目简介</div>
                                     <div class="intro-des">
-                                        <span>该项目为企业网站建设，其包括首页、产品中心、新闻资讯、招商加盟</span>
-                                    </div>
-                                </div>
-                                <div class="responsibility">
-                                    <div class="item-title">项目职责</div>
-                                    <div class="intro-des">
-                                        <span>负责项目首页、产品中心、新闻资讯、招商加盟、人力资源等页面的html，css的开发，与后台的数据交互，实现公司新闻信息及业务板块的动态刷新。</span>
+                                        <span>该项目为一个家具搭配类的小游戏项目，主要是为了吸收客户</span>
                                     </div>
                                 </div>
                                 <div class="tech">
-                                    <div class="item-title">技术要点</div>
+                                    <div class="item-title">项目职责</div>
                                     <div class="intro-des">
                                         <ul>
-                                            <li>使用DIV+CSS传统布局；</li>
-                                            <li>引用第三方库jQuery；</li>
-                                            <li>通过Ajax与后台数据交互；</li>
+                                            <li>负责PC端家具配置页面的开发，配置家具图片，坐标，大小等</li>
+                                            <li>利用canvas技术将客户搭配的场景生成海报并保存到手机</li>
+                                            <li>项目交互的优化，各种手机端的兼容处理</li>
                                         </ul>
                                     </div>
                                 </div>
@@ -324,7 +303,7 @@
                 </div>
                 <div class="connection">
                     <span><i class="iconfont icon-lianxiwo"></i><b>15625125702</b></span>
-                    <span><i class="iconfont icon-lianxiwo"></i><b>412986507@qq.com</b></span>
+                    <span> <img src="images/icon-email.png" class="icon-email" alt=""> <b>412986507@qq.com</b></span>
                 </div>
             </div>
         </div>
