--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                     </ul>
                 </div>
                 <div class="info-des">
-                    <p>一年半web前端开发经验</p>
+                    <p>两年半web前端开发经验</p>
                     <p>熟悉MV*开发,深谙自动化、模块化开发之道</p>
                     <p>高效的自学能力,具备独立分析解决问题能力</p>
                     <p>强烈的自我驱动力,代码强迫症患者</p>
