--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <div class="photo"></div>
             <div class="ct">
                 <p class="motto">
-                    向前跑，带着赤子的骄傲，生命的闪耀不历经磨难则能看到！
+                    向前跑，带着赤子的骄傲，生命的闪耀不历经磨难怎能看到！
                 </p>
                 <div class="ct-list">
                     <p>我叫温仕君</p>
