--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <title>温仕君简历</title>
+    <link rel="icon" href="totoro.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="totoro.ico" type="image/x-icon" />
     <link rel="stylesheet" href="node_modules/fullpage.js/dist/jquery.fullpage.css">
     <link rel="stylesheet" type="text/css" href="font/./iconfont.css">
     <link rel="stylesheet" href="lib/animate.css">
