--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
             <div class="content" id="productions">
                 <div class="swiper-container">
                     <div class="swiper-wrapper">
-                        <div class="swiper-slide">
+                        <div class="swiper-slide" style="background-image: url('images/bargain-bg.png');background-size: cover">
                             <div class="content-des">
                                 <h4>大砍家小程序</h4>
                                 <div class="intro">
@@ -187,7 +187,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="swiper-slide">
+                        <div class="swiper-slide" style="background-image: url('images/jingling-bg.png');background-size: cover">
                             <div class="content-des">
                                 <h4>美乐乐家居精灵后台管理系统的开发</h4>
                                 <div class="intro">
@@ -210,7 +210,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="swiper-slide">
+                        <div class="swiper-slide" style="background-image: url('images/jingling-bg.png');background-size: cover">
                             <div class="content-des">
                                 <h4>公共组件的开发</h4>
                                 <div class="intro">
@@ -232,7 +232,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="swiper-slide">
+                        <div class="swiper-slide" style="background-image: url('images/jingling-bg.png');background-size: cover">
                             <div class="content-des">
                                 <h4>节日活动大转盘抽奖活动</h4>
                                 <div class="intro">
@@ -253,7 +253,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="swiper-slide">
+                        <div class="swiper-slide" style="background-image: url('images/dreamHome-bg.gif'); background-size: contain; background-repeat: no-repeat; background-position: center 50%">
                             <div class="content-des">
                                 <h4>梦想的家小程序</h4>
                                 <div class="intro">
