大转盘项目背景

--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="swiper-slide" style="background-image: url('images/jingling-bg.png');background-size: cover">
+                        <div class="swiper-slide" style="background-image: url('images/dazhuanpan-bg.png');background-size: contain; background-repeat: no-repeat;background-position: center">
                             <div class="content-des">
                                 <h4>节日活动大转盘抽奖活动</h4>
                                 <div class="intro">
